--- a/cep47/Cargo.toml
+++ b/cep47/Cargo.toml
@@ -5,8 +5,8 @@ authors = ["astro019 <dmitry.yakov7@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-casper-contract = "1.4.3"
-casper-types = "1.4.4"
+casper-contract = "=1.4.4"
+casper-types = "=1.5.0"
 hex = { version = "0.4.3", default-features = false }
 contract-utils = { path = "../utils/contract-utils" }
 
